[package]
name = "apispeed"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.28"
